# main.py-for-deploymnet

./: config.py  dashboard_api.py  elevenlabs_api.py  employees.json  events.jsonl  inserter.py  last_voice.json  long_token.json  main.py  pyproject.toml  requirements.txt  service.py  utils.py
media/Fahad/2025-09-13/: doc_20250913_192402.xlsx
media/Fahad/2025-09-17/: doc_20250917_113619.docx
media/Hafiz/2025-09-11/: doc_20250911_180841.csv
media/Hafiz/2025-09-12/: doc_20250912_132429.json  doc_20250912_132448.csv
reports/: 923070251847.json  923112396153.json  923128289457.json  923172611096.json  923192006907.json  923212558027.json  923212558027_voice.json  923463248880.json  923463248880_voice.json  Boss.json
